# QiyuAgent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_CN.md  DEPLOYMENT.md  Dockerfile  ENGINEERING_DELIVERY_SPEC_CN.md  PRODUCT_PRD_CN.md  README.md  REPORT.md  docker-compose.yml  pyproject.toml
docs/: RUNNABLE_PRODUCT_FLOWS_CN.md  USER_MANUAL_CN.tex
docs/diagrams/mermaid/: 01_overall_system_architecture.mmd  02_product_function_framework.mmd  03_user_journey_flow.mmd  04_chat_sequence.mmd  05_module_sequence.mmd  06_session_state.mmd  07_data_flow.mmd  08_deployment_topology.mmd  09_validation_acceptance_flow.mmd
docs/superpowers/specs/: 2026-04-19-frontend-v2-redesign-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx  providers.tsx  router.tsx
frontend/src/pages/: HomePage.tsx  LoginPage.tsx  WorkbenchPage.tsx
frontend/src/types/: api.ts  domain.ts
scripts/: build_kb_image_mirror.py  build_lacquertutor_report_docx.py  render_mermaid_diagrams.ps1
src/lacquertutor/: __init__.py  __main__.py  config.py
src/lacquertutor/agent/: __init__.py  context.py  guardrails.py  mem0_service.py  memory.py  orchestrator.py  pipeline.py  resilience.py  session_modes.py  slot_normalizer.py  state.py  tools.py
tests/: conftest.py  test_agent_memory.py  test_contract_quality.py  test_integration.py  test_metrics.py  test_models.py  test_pipeline_resilience.py  test_retrieval.py  test_teaching_images.py  test_verifier.py  test_voi_scorer.py  test_web_sessions.py
(+75 files in other folders)
